Añadidas las consultas a mongoDB
Se han añadido las consultas que se piden en las prácticas.
Se ha creado un función para guardar esas consultas en un json.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 config.ini
 src/main/res/in/raw/kaggleData/*
 src/main/res/in/standarised/*
+src/main/res/out/resultConsultas/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
