--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ config.ini
 src/main/res/in/raw/kaggleData/*
 src/main/res/in/standarised/*
 src/main/res/out/resultConsultas/*
+!*.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
